--- a/00_canvas/clickdraw.html
+++ b/00_canvas/clickdraw.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
+  <head>
     <style>
       #slate {border: 1px solid black}
     </style>
+    <title>HW00</title>
+    <script src="clickdraw.js"></script>
+  </head>
+  <body>
     <h1>Bonjour monde!</h1>
-    <h2>Demo</h2>
+      <input type="checkbox" onclick="drawDot()">Dot</input>
     <div>
       <canvas height="600" width="600" id="slate">
 	         dis dat alt txt
       </canvas>
     </div>
+  </body>
 </html>
