--- a/00_canvas/clickdraw.html
+++ b/00_canvas/clickdraw.html
@@ -1,3 +1,7 @@
+<!--Kyle Tau
+SoftDev2 pd 6
+K00 -- I See a Red Door...
+2019-1-30-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,15 +9,16 @@
       #slate {border: 1px solid black}
     </style>
     <title>HW00</title>
-    <script src="clickdraw.js"></script>
   </head>
   <body>
     <h1>Bonjour monde!</h1>
-      <input type="checkbox" onclick="drawDot()">Dot</input>
+      <button id="clear"> Clear </button>
+      <button id="toggle"> Toggle </button>
     <div>
       <canvas height="600" width="600" id="slate">
 	         dis dat alt txt
       </canvas>
     </div>
+    <script src="clickdraw.js"></script>
   </body>
 </html>
