--- a/12_svg/index.html
+++ b/12_svg/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
+<head>
+<meta charset="utf-8">
 <style>
+
 .chart div {
   font: 10px sans-serif;
   background-color: steelblue;
@@ -8,7 +11,24 @@
   margin: 1px;
   color: white;
 }
+
 </style>
-<div class="chart"> </div>
-<script src="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
+</head>
+<body>
+  <div class="chart"></div>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script>
+  var data = [4, 8, 15, 16, 23, 42];
+
+  var x = d3.scaleLinear([0, d3.max(data)]).range([0, 10]);
+
+  d3.select(".chart")
+    .selectAll("div")
+      .data(data)
+    .enter().append("div")
+      .style("width", function(d) { return x(d) + "px"; })
+      .text(function(d) { return d; });
+
+  </script>
+</body>
 </html>
