--- a/13_svg/13.html
+++ b/13_svg/13.html
@@ -14,19 +14,19 @@
 
 </style>
 <svg class="chart"></svg>
-<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
 <script>
 
 var width = 420,
     barHeight = 20;
 
-var x = d3.scale.linear()
+var x = d3.scaleLinear()
     .range([0, width]);
 
 var chart = d3.select(".chart")
     .attr("width", width);
 
-d3.tsv("data.tsv", type, function(error, data) {
+d3.tsv.parse(d3.select("data.tsv").text(), type, function(error, data) {
   x.domain([0, d3.max(data, function(d) { return d.value; })]);
 
   chart.attr("height", barHeight * data.length);
