w hardcoded sets of data

--- a/21_js-mfr/school.html
+++ b/21_js-mfr/school.html
@@ -2,9 +2,15 @@
 <html>
   <head>
     <title></title>
-    <script src="data.js"></script>
   </head>
   <body>
-
+    <h1>These are calculations for sample sets of data</h1>
+    <h2>Average of the data set: [500,400,300]</h2>
+    <p id="avg">hi</p>
+    <h2>Percentage of Asians (School enrollment: [450,320,340,290] // Asian enrollment: [45,32,34,29])</h2>
+    <p id="asian_per">hi</p>
+    <h2>Standard Deviation of the data set: [130,240,350,460] </h2>
+    <p id="sd">hi</p>
+  <script src="data.js"></script>
   </body>
 </html>
